# repository-cli

./: .git-blame-ignore-revs  .gitignore  .ruff.toml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  LICENSE  MANIFEST.in  README.md  README.rst  babel.ini  pytest.ini  requirements-devel.txt  run-tests.sh  setup.cfg  setup.py
.github/workflows/: pypi-publish.yml  tests.yml
docs/: Makefile  api.rst  authors.rst  changes.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  license.rst  make.bat  usage.rst
repository_cli/: __init__.py  cli.py  click_options.py  click_param_types.py  config.py  ext.py  generate_commands.py  records.py  types.py  users.py  utils.py  version.py
repository_cli/cli/: __init__.py  cli.py  click_options.py  records.py  users.py  util.py
repository_cli/records/: __init__.py  files.py  identifiers.py  pids.py  records.py
tests/: conftest.py  test_rdmrecords.py  test_rdmrecords_identifiers.py  test_rdmrecords_pids.py  test_repository_cli.py
tests/commands/: test_rdmrecords.py  test_rdmrecords_identifiers.py  test_rdmrecords_pids.py
