# -*- coding: utf-8 -*-
#
# Copyright (C) 2021 Graz University of Technology.
#
# repository-cli is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = repository-cli
version = attr: repository_cli.__version__
description = "CLI utilities for TU Graz Repository."
long_description = file: README.rst, CHANGES.rst
keywords = invenio repository cli
license = MIT
author = Graz University of Technology
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/repository-cli
classifiers =
    Development Status :: 3 - Alpha

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    click>=7.1.1,<8.0
    invenio-rdm-records>=0.30.4,<0.31.0
    flask>=1.1,<2.0
    invenio-records-resources<0.16.0,>=0.15.2elasticsearch>=7.0.0,<8.0.0
    elasticsearch_dsl>=7.2.1
    SQLAlchemy-Continuum>=1.3.11
    SQLAlchemy<1.4.0
    SQLAlchemy-Utils<0.36,>=0.33.1invenio_search>=1.4.0,<2.0.0
    psycopg2-binary>=2.8.6

[options.extras_require]
tests_require =
    pytest-invenio>=1.4.0
    invenio_app_rdm==4.0.1

[options.entry_points]
flask.commands =
    repository = repository_cli.cli:utilities
invenio_base.apps =
    repository_cli = repository_cli:RepositoryCli

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[pycodestyle]
exclude = docs/conf.py
