# -*- coding: utf-8 -*-
#
# Copyright (C) 2021-2023 Graz University of Technology.
#
# repository-cli is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = repository-cli
version = attr: repository_cli.__version__
description = "CLI utilities for TU Graz Repository."
long_description = file: README.rst, CHANGES.rst
keywords = invenio repository cli
license = MIT
author = Graz University of Technology
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/repository-cli
classifiers =
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.9
zip_safe = False
install_requires =
    click>=7.1.1
    invenio-rdm-records[opensearch2]>=4.0.0
    invenio-records-marc21>=0.9
    invenio-records-lom>=0.10
    jq>=1.4.0
    tabulate>=0.9.0

[options.extras_require]
tests =
    pytest-invenio>=1.4.0
    pytest-black-ng>=0.4.0
    invenio-app>=1.3.0
    invenio-search[opensearch2]>=2.1.0
    invenio-cache>=1.1.1
    Sphinx>=4.5
    sphinx-click>=2.5.0
    ruff>=0.0.270

[options.entry_points]
flask.commands =
    repository = repository_cli.cli:utilities
invenio_base.apps =
    repository_cli = repository_cli:RepositoryCli

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[tool:isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts =  --black --doctest-glob="*.rst" --doctest-modules --cov=repository_cli --cov-report=term-missing
testpaths = tests repository_cli

